2012/03/20 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c: clear UDF and reset alarms
      when initializing an OUT record. Not all records do this
      in record support.
2012/03/19 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c: FIX - DSET for AI record
      had 'devGenVarGet' instead of 'read_ai' and 'read_ai' as
      special_linconv.
    - devGenVarApp/src/genVarTestMain.cpp: added task which requests
      IO-scan of 'listS' every 2s while value is not 0xffff.
2011/03/04 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c: Let 'devGenVarRegister'
      make copy of name when creating hash-table entry so
      the user may destroy it.
2011/03/03 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c, devGenVarApp/src/devGenVar.h,
      README: updated doc, added FLG_NPOST.
2011/03/03 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c: post event when input
      records process also.
2011/03/01 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c, devGenVarApp/src/devGenVar.h,
      devGenVarApp/Db/genVarTest.db, devGenVarApp/src/genVarTestMain.cpp,
      README:
      added support for timestamps, status, severity and
      asynchronous record processing (output records).
2011/01/28 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c, devGenVarApp/src/devGenVar.h:
      removed devGenVarInitDevSup(). devGenVar should be available
      before iocInit(). We now do lazy init via epicsThreadOnce...
2011/01/27 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c, devGenVarApp/src/devGenVar.h:
      hash table size must be a power of two between 8..16.
2011/01/27 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c, devGenVarApp/src/devGenVar.h,
      devGenVarApp/src/devGenVar.dbd: